Creating My .yml document

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,15 @@
 project:
+  type: book
   title: "ProjectOne"
-
-editor: visual
-
+  output-dir: _output
+  
+book: 
+  chapters: 
+    - ProjectOne.qmd
+    
+    
+website: 
+  navbar:
+    left: 
+      - href: ProjectOne.qmd
+        text: Home
