--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ book:
   chapters: 
     - index.qmd
     - Prac_day_1.qmd
+    - Practical_Day_four.qmd
     
     
 website: 
@@ -14,3 +15,6 @@ website:
     left: 
       - href: Prac_day_1.qmd
         text: Home
+      - href: Practical_Day_four.qmd
+        text: Day four
+        
